--- a/FoursquareAngularJS.Web/index.html
+++ b/FoursquareAngularJS.Web/index.html
@@ -1,23 +1,25 @@
 ﻿<!DOCTYPE html>
 <html data-ng-app="FoursquareApp">
 <head>
+    <meta name="keywords" content="angularjs,SPA,Single Page Application,bootstrap,bootstrap ui,tutorial,JS framework,foursquare,foursquare api,api,web api,Taiseer Joudeh" />
+    <meta name="description" content="SPA built using angularjs, this tutorial integrates with foursquare APIs, back end built using Asp.net web api,creatd by Taiseer Joudeh" />
+    <meta content="IE=edge, chrome=1" http-equiv="X-UA-Compatible" />
     <title>Explore Foursquare</title>
     <link href="content/css/bootstrap.min.css" rel="stylesheet" />
     <link href="content/css/amelia-bootstrap-theme.min.css" rel="stylesheet" />
     <link href="Content/css/toaster.css" rel="stylesheet" />
     <link href="content/css/loading-bar.min.css" rel="stylesheet" />
     <link href="content/css/site.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
 
     <div id="page">
-
         <header class="container" data-ng-controller="navigationController">
             <div id="menu" class="navbar navbar-default">
                 <div class="navbar-header">
-                    <button class="btn btn-success navbar-toggle"
-                        data-toggle="collapse"
-                        data-target=".navbar-collapse">
+                    <button class="btn btn-success navbar-toggle" data-ng-click="navbarExpanded = !navbarExpanded">
                         <span class="glyphicon glyphicon-chevron-down"></span>
                     </button>
                     <div id="logo">
@@ -26,7 +28,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="navbar-collapse collapse">
+                <div class="navbar-collapse collapse" data-collapse="!navbarExpanded">
                     <ul class="nav navbar-nav navbar-right">
                         <li data-ng-class="{'active':isActive('/explore')}"><a href="#/explore">Explore</a></li>
                         <li data-ng-class="{'active':isActive('/places')}"><a href="#/places">My Places</a></li>
@@ -34,7 +36,6 @@
                     </ul>
                 </div>
             </div>
-
         </header>
         <section id="body" class="container">
             <div data-ng-view=""></div>
@@ -58,7 +59,8 @@
     <script src="scripts/toaster.js"></script>
     <script src="scripts/loading-bar.min.js"></script>
 
-    <!-- Load custom scripts -->
+
+    <!-- Load app main script -->
     <script src="app/app.js"></script>
 
     <!-- Load services -->
